Add .everestignore file (#482)
* Add .everestignore file to allow mod developers to stop certain assets from being loaded

Co-authored-by: Kalobi <46748261+Kalobi@users.noreply.github.com>

--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -68,6 +68,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="KeraLua" Version="1.0.22" />
     <PackageReference Include="NLua" Version="1.4.25" />
+    <PackageReference Include="MAB.DotIgnore" Version="3.0.2" />
   </ItemGroup>
 
   <!--
