Trigger PR autobuild indirectly through GitHub action
Allows use of built-in GitHub policy for PR workflow approval.
This is much more reliable than trying to replicate it in Azure.

--- a/.azure-pipelines/build.yml
+++ b/.azure-pipelines/build.yml
@@ -1,16 +1,11 @@
 variables:
 - group: 'Common Variables'
 
-# Trigger for main repo branches, and non-draft PRs
+# Trigger for main repo branches
 trigger:
   branches:
     include:
     - dev
-pr:
-  branches:
-    include:
-    - dev
-  drafts: false
 
 
 name: '$(Build.BuildId)+$(BuildIdOffset)'
