--- a/Celeste.Mod.mm/Celeste.Mod.mm.csproj
+++ b/Celeste.Mod.mm/Celeste.Mod.mm.csproj
@@ -52,17 +52,18 @@
 
   <ItemGroup>
     <PackageReference Include="Mono.Cecil" Version="0.11.4" />
-    <PackageReference Include="MonoMod" Version="22.01.04.03" />
-    <PackageReference Include="MonoMod.RuntimeDetour" Version="22.01.04.03" />
-    <PackageReference Include="MonoMod.RuntimeDetour.HookGen" Version="22.01.04.03" />
-    <PackageReference Include="MonoMod.Utils" Version="22.01.04.03" />
-    <PackageReference Include="DotNetZip" Version="1.15.0" />
+    <PackageReference Include="MonoMod" Version="22.7.31.1" />
+    <PackageReference Include="MonoMod.RuntimeDetour" Version="22.7.31.1" />
+    <PackageReference Include="MonoMod.RuntimeDetour.HookGen" Version="22.7.31.1" />
+    <PackageReference Include="MonoMod.Utils" Version="22.7.31.1" />
+    <PackageReference Include="DotNetZip" Version="1.16.0" />
+    <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
     <PackageReference Include="YamlDotNet" Version="8.1.2" />
     <PackageReference Include="Jdenticon-net" Version="2.2.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="KeraLua" Version="1.0.22" />
-    <PackageReference Include="NLua" Version="1.4.25" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="KeraLua" Version="1.3.3" />
+    <PackageReference Include="NLua" Version="1.6.0" />
     <PackageReference Include="MAB.DotIgnore" Version="3.0.2" />
   </ItemGroup>
 
