--- a/MiniInstaller/MiniInstaller.csproj
+++ b/MiniInstaller/MiniInstaller.csproj
@@ -16,20 +16,47 @@
     </Compile>
   </ItemGroup>
 
+  <!-- Resolve AppHosts -->
   <ItemGroup>
     <PackageReference Include="runtime.win-x64.Microsoft.NETCore.DotNetAppHost" Version="7.0.2" GeneratePathProperty="true" ExcludeAssets="all" />
-    <Content Include="$(Pkgruntime_win-x64_Microsoft_NETCore_DotNetAppHost)\runtimes\win-x64\native\apphost.exe" TargetPath="apphosts\win.exe" CopyToOutputDirectory="always" />
-
     <PackageReference Include="runtime.linux-x64.Microsoft.NETCore.DotNetAppHost" Version="7.0.2" GeneratePathProperty="true" ExcludeAssets="all" />
-    <Content Include="$(Pkgruntime_linux-x64_Microsoft_NETCore_DotNetAppHost)\runtimes\linux-x64\native\apphost" TargetPath="apphosts\linux" CopyToOutputDirectory="always" />
-
     <PackageReference Include="runtime.osx-x64.Microsoft.NETCore.DotNetAppHost" Version="7.0.2" GeneratePathProperty="true" ExcludeAssets="all" />
-    <Content Include="$(Pkgruntime_osx-x64_Microsoft_NETCore_DotNetAppHost)\runtimes\osx-x64\native\apphost" TargetPath="apphosts\osx" CopyToOutputDirectory="always" />
   </ItemGroup>
 
-  <Target Name="BindAppHosts" AfterTargets="Build">
-    <Message Importance="High" Text="Binding AppHosts..." />
-    <Exec Command="dotnet '$(TargetPath)'" /> <!-- MiniInstaller will detect that it has been run directly, and bind AppHosts for all platforms -->
+  <PropertyGroup>
+    <AppHost_win-x64>$(Pkgruntime_win-x64_Microsoft_NETCore_DotNetAppHost)\runtimes\win-x64\native\apphost.exe</AppHost_win-x64>
+    <AppHost_linux-x64>$(Pkgruntime_linux-x64_Microsoft_NETCore_DotNetAppHost)\runtimes\linux-x64\native\apphost</AppHost_linux-x64>
+    <AppHost_osx-x64>$(Pkgruntime_osx-x64_Microsoft_NETCore_DotNetAppHost)\runtimes\osx-x64\native\apphost</AppHost_osx-x64>
+  </PropertyGroup>
+
+  <!-- Include AppHosts in the build (so that MiniInstaller can bind them for the Celeste executable) -->
+  <ItemGroup>
+    <Content Include="$(AppHost_win-x64)" TargetPath="apphosts\win.exe" CopyToOutputDirectory="always" />
+    <Content Include="$(AppHost_linux-x64)" TargetPath="apphosts\linux" CopyToOutputDirectory="always" />
+    <Content Include="$(AppHost_osx-x64)" TargetPath="apphosts\osx" CopyToOutputDirectory="always" />
+  </ItemGroup>
+
+  <!-- Bind AppHosts for MiniInstaller itself -->
+  <Target Name="IncludeAppHosts" BeforeTargets="AssignTargetPaths">
+    <PropertyGroup>
+      <AppHostIntermediatePath_win-x64>$(IntermediateOutputPath)\MiniInstaller-win.exe</AppHostIntermediatePath_win-x64>
+      <AppHostIntermediatePath_linux-x64>$(IntermediateOutputPath)\MiniInstaller-linux</AppHostIntermediatePath_linux-x64>
+      <AppHostIntermediatePath_osx-x64>$(IntermediateOutputPath)\MiniInstaller-osx</AppHostIntermediatePath_osx-x64>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <None Include="$(AppHostIntermediatePath_win-x64)" TargetPath="MiniInstaller-win.exe" CopyToOutputDirectory="always" CopyToPublishDirectory="always" />
+        <None Include="$(AppHostIntermediatePath_linux-x64)" TargetPath="MiniInstaller-linux" CopyToOutputDirectory="always" CopyToPublishDirectory="always" />
+        <None Include="$(AppHostIntermediatePath_osx-x64)" TargetPath="MiniInstaller-osx" CopyToOutputDirectory="always" CopyToPublishDirectory="always" />
+    </ItemGroup>
+  </Target>
+
+  <Target Name="BindAppHosts" AfterTargets="CoreCompile">
+    <Message Importance="High" Text="Binding MiniInstaller AppHosts..." />
+
+    <CreateAppHost AppHostSourcePath="$(AppHost_win-x64)" AppHostDestinationPath="$(AppHostIntermediatePath_win-x64)" AppBinaryName="$(AssemblyName)$(TargetExt)" IntermediateAssembly="@(IntermediateAssembly->'%(FullPath)')" />
+    <CreateAppHost AppHostSourcePath="$(AppHost_linux-x64)" AppHostDestinationPath="$(AppHostIntermediatePath_linux-x64)" AppBinaryName="$(AssemblyName)$(TargetExt)" IntermediateAssembly="@(IntermediateAssembly->'%(FullPath)')" />
+    <CreateAppHost AppHostSourcePath="$(AppHost_osx-x64)" AppHostDestinationPath="$(AppHostIntermediatePath_osx-x64)" AppBinaryName="$(AssemblyName)$(TargetExt)" IntermediateAssembly="@(IntermediateAssembly->'%(FullPath)')" />
   </Target>
 
 </Project>
