--- a/MiniInstaller/MiniInstaller.csproj
+++ b/MiniInstaller/MiniInstaller.csproj
@@ -14,6 +14,8 @@
     <Compile Include="..\Celeste.Mod.mm\Mod\Helpers\LogWriter.cs">
       <Link>LogWriter.cs</Link>
     </Compile>
+
+    <Content Include="..\lib-stripped\Celeste-icon.png" CopyToOutputDirectory="always" />
   </ItemGroup>
 
   <!-- Resolve AppHosts -->
