--- a/MiniInstaller/MiniInstaller.csproj
+++ b/MiniInstaller/MiniInstaller.csproj
@@ -18,28 +18,26 @@
     <Content Include="..\lib-stripped\Celeste-icon.png" CopyToOutputDirectory="always" />
   </ItemGroup>
 
-  <!-- Resolve AppHosts -->
+  <!-- Set up Piton AppHosts -->
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.HostModel" Version="3.1.16" />
-    <PackageReference Include="runtime.win-x86.Microsoft.NETCore.DotNetAppHost" Version="7.0.2" GeneratePathProperty="true" ExcludeAssets="all" />
-    <PackageReference Include="runtime.win-x64.Microsoft.NETCore.DotNetAppHost" Version="7.0.2" GeneratePathProperty="true" ExcludeAssets="all" />
-    <PackageReference Include="runtime.linux-x64.Microsoft.NETCore.DotNetAppHost" Version="7.0.2" GeneratePathProperty="true" ExcludeAssets="all" />
-    <PackageReference Include="runtime.osx-x64.Microsoft.NETCore.DotNetAppHost" Version="7.0.2" GeneratePathProperty="true" ExcludeAssets="all" />
+
+    <Content Include="..\lib-ext\piton-runtime.yaml" TargetPath="piton-runtime.yaml" CopyToOutputDirectory="always" CopyToPublishDirectory="always" />
   </ItemGroup>
 
   <PropertyGroup>
-    <AppHost_win-x86>$(Pkgruntime_win-x86_Microsoft_NETCore_DotNetAppHost)\runtimes\win-x86\native\apphost.exe</AppHost_win-x86>
-    <AppHost_win-x64>$(Pkgruntime_win-x64_Microsoft_NETCore_DotNetAppHost)\runtimes\win-x64\native\apphost.exe</AppHost_win-x64>
-    <AppHost_linux-x64>$(Pkgruntime_linux-x64_Microsoft_NETCore_DotNetAppHost)\runtimes\linux-x64\native\apphost</AppHost_linux-x64>
-    <AppHost_osx-x64>$(Pkgruntime_osx-x64_Microsoft_NETCore_DotNetAppHost)\runtimes\osx-x64\native\apphost</AppHost_osx-x64>
+    <AppHost_win-x86>..\lib-ext\piton\piton-win_x86.exe</AppHost_win-x86>
+    <AppHost_win-x64>..\lib-ext\piton\piton-win_x64.exe</AppHost_win-x64>
+    <AppHost_linux-x64>..\lib-ext\piton\piton-linux_x64</AppHost_linux-x64>
+    <AppHost_osx-x64>..\lib-ext\piton\piton-macos_x64</AppHost_osx-x64>
   </PropertyGroup>
 
   <!-- Include AppHosts in the build (so that MiniInstaller can bind them for the Celeste executable) -->
   <ItemGroup>
-    <Content Include="$(AppHost_win-x86)" TargetPath="apphosts\win.x86.exe" CopyToOutputDirectory="always" />
-    <Content Include="$(AppHost_win-x64)" TargetPath="apphosts\win.x64.exe" CopyToOutputDirectory="always" />
-    <Content Include="$(AppHost_linux-x64)" TargetPath="apphosts\linux" CopyToOutputDirectory="always" />
-    <Content Include="$(AppHost_osx-x64)" TargetPath="apphosts\osx" CopyToOutputDirectory="always" />
+    <Content Include="$(AppHost_win-x86)" TargetPath="piton-apphosts\win.x86.exe" CopyToOutputDirectory="always" />
+    <Content Include="$(AppHost_win-x64)" TargetPath="piton-apphosts\win.x64.exe" CopyToOutputDirectory="always" />
+    <Content Include="$(AppHost_linux-x64)" TargetPath="piton-apphosts\linux" CopyToOutputDirectory="always" />
+    <Content Include="$(AppHost_osx-x64)" TargetPath="piton-apphosts\osx" CopyToOutputDirectory="always" />
   </ItemGroup>
 
   <!-- Bind AppHosts for MiniInstaller itself -->
@@ -56,7 +54,6 @@
       <Content Include="$(AppHostIntermediatePath_win-x64)" TargetPath="MiniInstaller-win64.exe" CopyToOutputDirectory="always" CopyToPublishDirectory="always" />
       <Content Include="$(AppHostIntermediatePath_linux-x64)" TargetPath="MiniInstaller-linux" CopyToOutputDirectory="always" CopyToPublishDirectory="always" />
       <Content Include="$(AppHostIntermediatePath_osx-x64)" TargetPath="MiniInstaller-osx" CopyToOutputDirectory="always" CopyToPublishDirectory="always" />
-      <Content Include="app.manifest" TargetPath="MiniInstaller-win.exe.manifest" CopyToOutputDirectory="always" CopyToPublishDirectory="always" /> <!-- Needed as otherwise Windows will think we're an actual installer which requires admin privileges -->
     </ItemGroup>
   </Target>
 
